  - BREAKING - s3WriteGzip removed, use s3Compression=gzip
  - BREAKING - s3GapPacketPos defaults to TRUE
  - BREAKING - enablePacketDedup defaults to TRUE
  - BREAKING - authMode defaults to digest now
  - BREAKING - removed old v1 APIs
  - all - authMode setting added
  - all - authMode=basic added
  - capture - moloch converted to arkime
  - capture - override ips can now set any field
  - capture - overrideIpFiles setting
  - viewer - removed x-moloch-auth


4.3.3 2023/07/xx

4.3.2 2023/06/13
  - release - cyberchef 10.4.0 libpcap 1.10.4
  - all - config 'prefix' can be at most 50 characters
  - all - new cookie generation code
  - capture - handle packets better at epoch time
  - cont3xt - add twilio country code tidbit
  - cont3xt - add httpRealm to sample config
  - cont3xt - help improvements
  - cont3xt - minor UI improvements
  - db.pl - set ISM deleteTime for sessions correctly
  - esproxy - add tests
  - parliament - fixed occasional missing token error
  - viewer/wise - Field/Value actions now support all:true to show on every instance
  - viewer - Fix Src/Dst mouse over for packets/bytes
  - viewer - Field Actions didn't work in expanded meta
  - viewer - Fix sending/receiving sessions not working

4.3.1 2023/05/08
  - BREAKING - If running mixed versions of Arkime, broken cron queries error
               might show on OLD version
  - release - fix ubuntu22 kafka dep
  - all - passwordSecret log message now has the right [section]
  - capture - --tags option now works as well as --tag
  - viewer - new auto cronQueries setting
  - viewer - change where primary viewer info is stored to not cause constant 
             mapping change
  - viewer - fixed ipv6 not working, now assumes zero filled with mask (if 
             not provided)
  - viewer - code refactor into javascript classes

4.3.0 2023/04/27
  - BREAKING - Only SuperAdmin can assign *Admin roles now
  - release - fix kafka library linking
  - release - al2023 support