@@ -27,7 +27,8 @@
 extern ArkimeConfig_t        config;
 
 LOCAL GKeyFile             *arkimeKeyFile;
-LOCAL char                **overrideIpFiles;
+LOCAL char                **overrideIpsFiles;
+LOCAL char                **packetDropIpsFiles;
 
 /******************************************************************************/
 gchar **arkime_config_section_raw_str_list(GKeyFile *keyfile, char *section, char *key, char *d)
@@ -695,18 +696,18 @@ void arkime_config_load_override_ips()
         arkime_config_parse_override_ips(arkimeKeyFile);
     }
 
-    overrideIpFiles = arkime_config_str_list(NULL, "overrideIpFiles", NULL);
-    if (overrideIpFiles) {
-        for (int i = 0; overrideIpFiles[i]; i++) {
+    overrideIpsFiles = arkime_config_str_list(NULL, "overrideIpsFiles", NULL);
+    if (overrideIpsFiles) {
+        for (int i = 0; overrideIpsFiles[i]; i++) {
             GKeyFile *keyfile = g_key_file_new();
-            status = g_key_file_load_from_file(keyfile, overrideIpFiles[i], G_KEY_FILE_NONE, &error);
+            status = g_key_file_load_from_file(keyfile, overrideIpsFiles[i], G_KEY_FILE_NONE, &error);
             if (!status || error) {
-                if (overrideIpFiles[i][0] == '-') {
+                if (overrideIpsFiles[i][0] == '-') {
                     if (error)
                         g_error_free(error);
                     continue;
                 } else {
-                    CONFIGEXIT("Couldn't load overrideIpFiles file (%s) %s\n", overrideIpFiles[i], (error?error->message:""));
+                    CONFIGEXIT("Couldn't load overrideIpsFiles file (%s) %s\n", overrideIpsFiles[i], (error?error->message:""));
                 }
             }
             arkime_config_parse_override_ips(keyfile);
@@ -717,15 +718,15 @@ void arkime_config_load_override_ips()
     arkime_db_install_override_ip();
 }
 /******************************************************************************/
-void arkime_config_load_packet_ips()
+void arkime_config_parse_packet_ips(GKeyFile *keyFile)
 {
     GError   *error = 0;
 
-    if (!g_key_file_has_group(arkimeKeyFile, "packet-drop-ips"))
+    if (!g_key_file_has_group(keyFile, "packet-drop-ips"))
         return;
 
     gsize keys_len;
-    gchar **keys = g_key_file_get_keys (arkimeKeyFile, "packet-drop-ips", &keys_len, &error);
+    gchar **keys = g_key_file_get_keys (keyFile, "packet-drop-ips", &keys_len, &error);
     if (error) {
         CONFIGEXIT("Error with packet-drop-ips: %s", error->message);
     }
@@ -733,7 +734,7 @@ void arkime_config_load_packet_ips()
     gsize k, v;
     for (k = 0 ; k < keys_len; k++) {
         gsize values_len;
-        gchar **values = g_key_file_get_string_list(arkimeKeyFile,
+        gchar **values = g_key_file_get_string_list(keyFile,
                                                    "packet-drop-ips",
                                                    keys[k],
                                                   &values_len,
@@ -752,6 +753,37 @@ void arkime_config_load_packet_ips()
         g_strfreev(values);
     }
     g_strfreev(keys);
+}
+/******************************************************************************/
+void arkime_config_load_packet_ips()
+{
+    gboolean  status;
+    GError   *error = 0;
+
+    if (g_key_file_has_group(arkimeKeyFile, "packet-ips")) {
+        arkime_config_parse_packet_ips(arkimeKeyFile);
+    }
+
+    packetDropIpsFiles = arkime_config_str_list(NULL, "packetDropIpsFiles", NULL);
+    if (packetDropIpsFiles) {
+        for (int i = 0; packetDropIpsFiles[i]; i++) {
+            GKeyFile *keyfile = g_key_file_new();
+            status = g_key_file_load_from_file(keyfile, packetDropIpsFiles[i], G_KEY_FILE_NONE, &error);
+            if (!status || error) {
+                if (packetDropIpsFiles[i][0] == '-') {
+                    if (error)
+                        g_error_free(error);
+                    continue;
+                } else {
+                    CONFIGEXIT("Couldn't load packetDropIpsFiles file (%s) %s\n", packetDropIpsFiles[i], (error?error->message:""));
+                }
+            }
+            arkime_config_parse_packet_ips(keyfile);
+            g_key_file_free(keyfile);
+        }
+    }
+
+    arkime_packet_install_packet_ip();
 }
 /******************************************************************************/
 void arkime_config_add_header(ArkimeStringHashStd_t *hash, char *key, int pos)
@@ -1036,5 +1068,6 @@ void arkime_config_exit()
     if (config.smtpIpHeaders)
         g_strfreev(config.smtpIpHeaders);
 
-    g_strfreev(overrideIpFiles);
+    g_strfreev(overrideIpsFiles);
+    g_strfreev(packetDropIpsFiles);
 }
